apps/dssp-spring-package-lab-2/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dssp-spring-package-lab-2
  namespace: dev
  labels:
    backstage.io/kubernetes-id: dssp-spring-package-lab-2
spec:
  selector:
    app: dssp-spring-package-lab-2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
